Endpoint security was implemented based on user role and bug fixes were implemented.
