# docs/swagger.json
@@ -209,7 +209,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/models.ConsentAuthorization"
+                                "$ref": "#/definitions/response.ConsentAuthorizationResponseDTO"
                             }
                         }
                     }
@@ -242,7 +242,7 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/models.ConsentAuthorization"
+                            "$ref": "#/definitions/response.ConsentAuthorizationResponseDTO"
                         }
                     },
                     "400": {
@@ -259,18 +259,18 @@
         },
         "/consent_authorizations/{id}": {
             "get": {
-                "description": "Retrieve a single consent_authorization by its ID",
+                "description": "Retrieve consent_authorizations for a specific patient",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
                     "consent_authorizations"
                 ],
-                "summary": "Get a consent_authorization by ID",
+                "summary": "Get consent_authorizations by patient ID",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "ConsentAuthorization ID",
+                        "description": "Patient ID",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -280,7 +280,10 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.ConsentAuthorization"
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/response.ConsentAuthorizationResponseDTO"
+                            }
                         }
                     },
                     "404": {
@@ -320,7 +323,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/request.CreateConsentAuthorizationDTO"
+                            "$ref": "#/definitions/request.UpdateConsentAuthorizationDTO"
                         }
                     }
                 ],
@@ -328,7 +331,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.ConsentAuthorization"
+                            "$ref": "#/definitions/response.ConsentAuthorizationResponseDTO"
                         }
                     },
                     "400": {
@@ -442,6 +445,15 @@
                                 "type": "string"
                             }
                         }
+                    },
+                    "403": {
+                        "description": "Forbidden",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
                     }
                 }
             }
@@ -522,6 +534,15 @@
                     },
                     "400": {
                         "description": "Bad Request",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "403": {
+                        "description": "Forbidden",
                         "schema": {
                             "type": "object",
                             "additionalProperties": {
@@ -3983,29 +4004,6 @@
         }
     },
     "definitions": {
-        "models.ConsentAuthorization": {
-            "type": "object",
-            "properties": {
-                "detalles": {
-                    "type": "string"
-                },
-                "fecha_consentimiento": {
-                    "type": "string"
-                },
-                "id_paciente": {
-                    "type": "integer"
-                },
-                "patient": {
-                    "$ref": "#/definitions/models.Patient"
-                },
-                "ruta_archivo_externo": {
-                    "type": "string"
-                },
-                "tipo_consentimiento": {
-                    "type": "string"
-                }
-            }
-        },
         "models.ConsultationVisit": {
             "type": "object",
             "properties": {
@@ -4310,7 +4308,6 @@
                 "detalles",
                 "fecha_consentimiento",
                 "id_paciente",
-                "ruta_archivo_externo",
                 "tipo_consentimiento"
             ],
             "properties": {
@@ -4323,9 +4320,6 @@
                 },
                 "id_paciente": {
                     "type": "integer"
-                },
-                "ruta_archivo_externo": {
-                    "type": "string"
                 },
                 "tipo_consentimiento": {
                     "type": "string"
@@ -4837,6 +4831,26 @@
                 }
             }
         },
+        "request.UpdateConsentAuthorizationDTO": {
+            "type": "object",
+            "required": [
+                "detalles",
+                "fecha_consentimiento",
+                "tipo_consentimiento"
+            ],
+            "properties": {
+                "detalles": {
+                    "type": "string"
+                },
+                "fecha_consentimiento": {
+                    "type": "string",
+                    "example": "2025-01-20"
+                },
+                "tipo_consentimiento": {
+                    "type": "string"
+                }
+            }
+        },
         "request.UpdateHospitalEmployeeAndUserDTO": {
             "type": "object",
             "properties": {
@@ -4969,6 +4983,24 @@
                     "type": "string"
                 },
                 "observaciones_recomendaciones": {
+                    "type": "string"
+                }
+            }
+        },
+        "response.ConsentAuthorizationResponseDTO": {
+            "type": "object",
+            "properties": {
+                "detalles": {
+                    "type": "string"
+                },
+                "fecha_consentimiento": {
+                    "type": "string",
+                    "example": "2025-01-20"
+                },
+                "id_consentimiento": {
+                    "type": "integer"
+                },
+                "tipo_consentimiento": {
                     "type": "string"
                 }
             }
