# internal/API/dto/request/consent_authorization_request_dto.go
@@ -1,9 +1,14 @@
 package request
 
 type CreateConsentAuthorizationDTO struct {
-	IDPatient        uint   `json:"id_paciente" binding:"required"`
-	ConsentType      string `json:"tipo_consentimiento" binding:"required"`
-	ConsentDate      string `json:"fecha_consentimiento" binding:"required" example:"2025-01-20"`
-	Details          string `json:"detalles" binding:"required"`
-	ExternalFilePath string `json:"ruta_archivo_externo" binding:"required"`
+	IDPatient   uint   `json:"id_paciente" binding:"required"`
+	ConsentType string `json:"tipo_consentimiento" binding:"required"`
+	ConsentDate string `json:"fecha_consentimiento" binding:"required" example:"2025-01-20"`
+	Details     string `json:"detalles" binding:"required"`
+}
+
+type UpdateConsentAuthorizationDTO struct {
+	ConsentType string `json:"tipo_consentimiento" binding:"required"`
+	ConsentDate string `json:"fecha_consentimiento" binding:"required" example:"2025-01-20"`
+	Details     string `json:"detalles" binding:"required"`
 }
